# salary-forecast

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cli.py  config.json  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
.github/workflows/: ci.yml
src/: cli.py  geo_utils.py  model.py  preprocessing.py  salaries-list.csv  train.py  utils.py
src/agents/: __init__.py  column_classifier.py  feature_encoder.py  model_configurator.py  prompt_injection_detector.py  tools.py  workflow.py
src/api/: app.py  dependencies.py  exceptions.py  storage.py
src/api/mcp/: handlers.py  server.py  tools.py
src/api/routers/: analytics.py  inference.py  models.py  training.py  workflow.py
src/app/: api_client.py  app.py  caching.py  config_ui.py  data_analysis.py  inference_ui.py  model_analysis.py  service_factories.py  train_ui.py
src/cli/: generate_config_cli.py  inference_cli.py  train_cli.py
src/llm/: client.py
src/llm/prompts/: config_generation_system.md  prompt_injection_detection.md
src/llm/prompts/agents/: column_classifier_system.md  feature_encoder_system.md  model_configurator_system.md
src/llm/prompts/presets/: salary.md
src/model/: __init__.py  config_schema_model.py  model.py  preprocessing.py
src/services/: __init__.py  analytics_service.py  config_generator.py  inference_service.py  llm_service.py  model_registry.py  training_service.py  workflow_service.py
src/utils/: __init__.py  cache_manager.py  compatibility.py  config_loader.py  csv_validator.py  data_utils.py  env_loader.py  geo_utils.py  json_utils.py  logger.py  observability.py  performance.py  prompt_loader.py
src/xgboost/: __init__.py  model.py  preprocessing.py
tests/: conftest.py  test_cli.py  test_model.py
tests/agents/: test_column_classifier.py  test_tools.py
tests/app/: test_app.py  test_config_ui.py  test_data_analysis.py  test_model_analysis.py  test_train_ui.py
tests/cli/: test_train_cli.py
tests/integration/: __init__.py  test_workflow_integration.py  test_workflow_location_type.py
tests/integration/agents/: test_workflow_integration.py
tests/integration/api/: conftest.py  test_analytics_api.py  test_health.py  test_inference_api.py  test_mcp.py  test_models_api.py  test_training_api.py  test_workflow_api.py
tests/integration/app/: test_service_alignment_phase7.py
tests/integration/services/: test_llm_only_config_integration.py  test_observability_integration.py  test_workflow_location_type.py
tests/llm/: test_client.py
tests/model/: test_model.py
tests/services/: test_config_generator.py
tests/unit/: test_analytics_service.py  test_app.py  test_column_classifier_location_type.py  test_compatibility.py  test_config_generator.py  test_config_loader.py  test_config_schema_model.py  test_config_ui_optional_encodings.py  test_data_analysis.py  test_data_utils.py  test_env_loader.py  test_feature_encoder.py  test_feature_encoder_observability.py  test_generate_config_cli.py  test_inference_cli.py  test_inference_ui.py  test_llm_service.py  test_model_configurator.py  test_model_configurator_observability.py  test_model_registry.py  test_observability.py  test_preprocessing.py  test_prompt_injection_detector.py  test_prompt_loader.py  test_tools.py  test_train_cli.py  test_training_service.py  test_workflow.py  test_workflow_observability.py  test_workflow_service.py  test_workflow_validation.py
tests/unit/agents/: test_column_classifier.py  test_column_classifier_location_type.py  test_column_classifier_observability.py  test_feature_encoder.py  test_feature_encoder_observability.py  test_model_configurator.py  test_model_configurator_observability.py  test_prompt_injection_detector.py  test_tools.py  test_tools_caching.py  test_workflow.py  test_workflow_observability.py
tests/unit/api/: test_analytics_router.py  test_inference_router.py  test_mcp_handlers.py  test_mcp_server.py  test_models_router.py  test_storage.py  test_training_router.py  test_workflow_router.py
tests/unit/app/: test_api_client.py  test_app.py  test_caching.py  test_config_ui.py  test_config_ui_optional_encodings.py  test_data_analysis.py  test_inference_integration.py  test_inference_ui.py  test_model_analysis.py  test_service_factories.py  test_train_ui.py
tests/unit/cli/: test_generate_config_cli.py  test_inference_cli.py  test_train_cli.py
tests/unit/llm/: test_client.py  test_llm_caching.py
tests/unit/model/: test_config_schema_model.py
tests/unit/services/: test_analytics_service.py  test_config_generator.py  test_inference_service.py  test_llm_service.py  test_model_registry.py  test_training_service.py  test_workflow_service.py  test_workflow_service_injection.py  test_workflow_validation.py
tests/unit/utils/: test_cache_manager.py  test_compatibility.py  test_config_loader.py  test_csv_validator.py  test_data_utils.py  test_env_loader.py  test_geo_caching.py  test_geo_utils.py  test_json_utils.py  test_logger.py  test_observability.py  test_performance.py  test_prompt_loader.py
tests/unit/xgboost/: test_model.py  test_preprocessing.py  test_preprocessing_caching.py
tests/utils/: test_csv_validator.py
tests/xgboost/: test_model.py
