[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salary-forecast"
version = "0.1.0"
description = "A salary forecasting engine."
readme = "README.md"
authors = [
    { name = "Jonathan", email = "jonkmatsumo@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
# Dependencies use flexible version constraints (>=) for development
# For reproducible builds, see requirements.txt with pinned versions
# Tested with Python 3.9, 3.10, 3.11 (see CI matrix)
dependencies = [
    "xgboost>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.0.0",
    "streamlit>=1.28.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "mlflow>=2.0.0",
    "pydantic>=2.0.0",
    "geopy>=2.0.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "urllib3<2.0.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
]

[project.optional-dependencies]
# Development dependencies
# For pinned versions, see requirements-dev.txt
dev = [
    "pytest",
    "mypy>=1.0.0",
    "types-python-dotenv",
]

[project.scripts]
salary-forecast-train = "src.cli.train_cli:main"
salary-forecast-infer = "src.cli.inference_cli:main"
salary-forecast-config = "src.cli.generate_config_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."
addopts = "-v"
