[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salary-forecast"
version = "0.1.0"
description = "A salary forecasting engine."
readme = "README.md"
authors = [
    { name = "Jonathan", email = "jonkmatsumo@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9,<3.13"
# Dependencies use flexible version constraints (>=) for development
# For reproducible builds, see requirements.txt with pinned versions
# Tested with Python 3.12 (see CI matrix)
dependencies = [
    "xgboost>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.0.0",
    "streamlit>=1.28.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "mlflow>=2.0.0",
    "pydantic>=2.0.0",
    "geopy>=2.0.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "urllib3>=2.0.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "python-json-logger>=2.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "slowapi>=0.1.9,<1.0.0",
]

[project.optional-dependencies]
# Development dependencies
# For pinned versions, see requirements-dev.txt
dev = [
    "pytest",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "mypy>=1.0.0",
    "types-cachetools>=5.3.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
    "pre-commit>=3.0.0",
]

[project.scripts]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | mlruns
  | salary_forecast.egg-info
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
skip_glob = ["mlruns/**", "salary_forecast.egg-info/**"]

[tool.bandit]
exclude_dirs = ["tests", "mlruns", "salary_forecast.egg-info", ".venv", "venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used test (common in test files)
test_files = ["test_*.py", "*_test.py"]
